[package]
name = "wisegate"
version = "0.7.0"
edition = "2024"
description = "A high-performance, secure reverse proxy with rate limiting and IP filtering"
license = "Apache-2.0"
authors = ["davlgd"]
repository = "https://github.com/davlgd/wisegate"
exclude = [
    ".github/",
    "target/",
    ".gitignore",
    "Cargo.lock",
    "LICENSE",
    "README.md",
]

[dependencies]
bytes = "1.11.0"
clap = { version = "4.5.54", features = ["derive"] }
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.19", features = ["full"] }
once_cell = "1.21.3"
reqwest = { version = "0.13.1", default-features = false, features = ["json"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

[profile.release]
codegen-units = 1   # Single codegen unit for max optimization
lto = true          # Link Time Optimization
opt-level = 3       # Optimize for speed
panic = "abort"     # Smaller binary, no unwinding
strip = true        # Remove debug symbols
