[workspace]
members = ["wisegate-core"]

[package]
name = "wisegate"
version = "0.10.0"
edition = "2024"
description = "A high-performance, secure reverse proxy with rate limiting and IP filtering"
license = "Apache-2.0"
authors = ["davlgd"]
repository = "https://github.com/davlgd/wisegate"
exclude = [
    ".github/",
    "target/",
    ".gitignore",
    "Cargo.lock",
    "LICENSE",
    "README.md",
]

[dependencies]
wisegate-core = { version = "0.10.0", path = "wisegate-core" }
clap = { version = "4.5.54", features = ["derive"] }
hyper = { version = "1.8.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.19", features = ["tokio"] }
once_cell = "1.21.3"
reqwest = { version = "0.13.1", default-features = false, features = ["json"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

[dev-dependencies]
base64 = "0.22"

[profile.release]
codegen-units = 1   # Single codegen unit for max optimization
lto = true          # Link Time Optimization
opt-level = 3       # Optimize for speed
panic = "abort"     # Smaller binary, no unwinding
strip = true        # Remove debug symbols
