[package]
name = "wisegate-core"
version = "0.8.0"
edition = "2024"
description = "Core library for WiseGate reverse proxy - rate limiting, IP filtering, and request handling"
license = "Apache-2.0"
authors = ["davlgd"]
repository = "https://github.com/davlgd/wisegate"
keywords = ["proxy", "rate-limiting", "ip-filter", "reverse-proxy"]
categories = ["network-programming", "web-programming"]

[dependencies]
bytes = "1.11.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["server", "http1"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json"] }
tokio = { version = "1.49.0", features = ["sync", "time"] }
tracing = "0.1.44"
